--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
                 <a href="#">QUEM SOMOS</a>
             </div>
             <div class="Login">
-                <a href="#">Entrar</a>
+                <a href="login.html">Entrar</a>
                 <p>|</p>
-                <a href="#">Cadastro</a>
+                <a href="cadastro.html">Cadastro</a>
             </div>
         </nav>
     </header>
@@ -64,7 +64,7 @@
 
 
        </div>
-       <img src="imagens/mapa1.png" alt="mapa_1"> 
+        <img src="imagens/mapa1.png" alt="mapa_1" class="mapa"> 
     </main>
 </body>
 </html>
