--- a/login.html
+++ b/login.html
@@ -36,6 +36,6 @@
         </div>
       </div>
       </div>
-      <script src="../script/login.js"></script>
+      <script src="script/login.js"></script>
     </body>
 </html>
