--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <nav>
             <div class="Menu">
-                <a href="#"><img src="imagens/patinha.png" alt="patinha"></a>
+                <a href="index.html"><img src="imagens/patinha.png" alt="patinha"></a>
                 <a href="#">GATOS</a>
                 <a href="#">CACHORROS</a>
                 <a href="#">COMUNIDADE</a>
