--- a/index.html
+++ b/index.html
@@ -8,13 +8,34 @@
 </head>
 <body>
     <header>
-        <nav>
-            <div class="Menu">
+        <nav class="header__nav">
+            <div class="header__logo">
                 <a href="index.html"><img src="imagens/patinha.png" alt="patinha"></a>
-                <a href="#">GATOS</a>
-                <a href="#">CACHORROS</a>
-                <a href="#">COMUNIDADE</a>
-                <a href="#">QUEM SOMOS</a>
+                <div class="header__logo-overlay"></div>
+            </div>
+            <ul class="header__menu">
+                <li>
+                    <a href="#gatos">GATOS</a>
+                </li>
+                <li>
+                    <a href="cachorros">CACHORROS</a>
+                </li>
+                <li>
+                    <a href="#outros">OUTROS</a>
+                </li>
+                <li>
+                    <a href="#comunidade">COMUNIDADE</a>
+                </li>
+                <li>
+                    <a href="#quem-somos">QUEM SOMOS</a>
+                </li>
+            </ul>
+            <ul class="header__menu-mobile">
+                <li>
+                    <img src="imagens/patinha.png"
+                    alt="menu" />
+                </li>
+            </ul>
             </div>
             <div class="Login">
                 <a href="login.html">Entrar</a>
