--- a/index.html
+++ b/index.html
@@ -7,40 +7,40 @@
     <link rel="stylesheet" href="estilos/index.css">
 </head>
 <body>
-    <header>
+    <header>  
         <nav class="header__nav">
-            <div class="header__logo">
-                <a href="index.html"><img src="imagens/patinha.png" alt="patinha"></a>
-                <div class="header__logo-overlay"></div>
+            <div class="header-esq"> 
+                <div class="header__logo">
+                    <a href="index.html"><img src="imagens/patinha.png" alt="patinha"></a>
+                    <div class="header__logo-overlay"></div>
+                </div>
+                <ul class="header__menu">
+                    <li>
+                        <a href="#gatos">GATOS</a>
+                    </li>
+                    <li>
+                        <a href="cachorros">CACHORROS</a>
+                    </li>
+                    <li>
+                        <a href="#outros">OUTROS</a>
+                    </li>
+                    <li>
+                        <a href="#comunidade">COMUNIDADE</a>
+                    </li>
+                    <li>
+                        <a href="#quem-somos">QUEM SOMOS</a>
+                    </li>
+                </ul>
             </div>
-            <ul class="header__menu">
-                <li>
-                    <a href="#gatos">GATOS</a>
-                </li>
-                <li>
-                    <a href="cachorros">CACHORROS</a>
-                </li>
-                <li>
-                    <a href="#outros">OUTROS</a>
-                </li>
-                <li>
-                    <a href="#comunidade">COMUNIDADE</a>
-                </li>
-                <li>
-                    <a href="#quem-somos">QUEM SOMOS</a>
-                </li>
-            </ul>
             <ul class="header__menu-mobile">
-                <li>
-                    <img src="imagens/patinha.png"
-                    alt="menu" />
-                </li>
             </ul>
             </div>
-            <div class="Login">
-                <a href="login.html">Entrar</a>
-                <p>|</p>
-                <a href="cadastro.html">Cadastro</a>
+            <div class="header-dir">
+                <div class="Login">
+                    <a href="login.html">Entrar</a>
+                    <p>|</p>
+                    <a href="cadastro.html">Cadastro</a>
+                </div>
             </div>
         </nav>
     </header>
@@ -51,41 +51,49 @@
             </h1>
             <form action="/search" method="get">
                 <input type="search" name="q" placeholder="Pesquisar...">
-                <button type="submit">Pesquisar</button>
             </form>
-            <p>
+            <p class="p_input">
                 Mostrando 'x' Pets em um raio de 'y' km 
             </p>
-            <div>
-                <h2>
-                    Cachorro Macho
-                </h2>
-                <p>
-                    Encontrado - 3km de distância
-                </p>
-                <ul>
-                    <li>Perdido em: </li>
-                    <li>Achado em:</li>
-                    <li>...</li>
-                </ul>
+            <div class="cachorro_box">
+                    <div class="cachorro_esq">
+                        <h2>
+                            Cachorro Macho
+                        </h2>
+                        <p>
+                            Encontrado - 3km de distância
+                        </p>
+                        <ul>
+                            <li>Perdido em: </li>
+                            <li>Achado em:</li>
+                            <li>...</li>
+                        </ul>
+                    </div>
+                    <img src="imagens/cachorro.png" alt="cachorro" class="img_cachorro">
+                
             </div>
-            <div>
-                <h2>
-                    Gata Fêmea
-                </h2>
-                <p>
-                    Perdida - 200m de distância
-                </p>
-                <ul>
-                    <li>Perdido em: </li>
-                    <li>Achado em:</li>
-                    <li>...</li>
-                </ul>
+            <div class="gato_box">
+                <div class="gato_esq">
+                    <h2>
+                        Gata Fêmea
+                    </h2>
+                    <p>
+                        Perdida - 200m de distância
+                    </p>
+                    <ul>
+                        <li>Perdido em: </li>
+                        <li>Achado em:</li>
+                        <li>...</li>
+                    </ul>
+                </div>
+                <img src="imagens/gato.png" alt="gato" class="img_gato">
             </div>
 
 
        </div>
-        <img src="imagens/mapa1.png" alt="mapa_1" class="mapa"> 
+        <div class="mapa">
+            <img src="imagens/mapa1.png" alt="mapa_1">
+        </div> 
     </main>
 </body>
 </html>
