Pending changes exported from your codespace

--- a/login.html
+++ b/login.html
@@ -29,11 +29,11 @@
         </div>
 
         <div class='botao'>
-          <button class="entrar-button" onclick='entrar()'>Entrar</button>
+          <button class="entrar-button" onclick='entrar()'>ENTRAR</button>
         </div>
         
         <div class='botao'>
-          <button class="cadastrar-button" onclick="window.location.href='cadastro.html'">Cadastre-se</button>
+          <button class="cadastrar-button" onclick="window.location.href='cadastro.html'">CADASTRE-SE</button>
         </div>
 
       </div>
