--- a/cadastro.html
+++ b/cadastro.html
@@ -7,6 +7,7 @@
   <title>Cadastro</title>
 </head>
 <body>
+  <a href="index.html">Menu</a></div>
   <div class='container'>
     <div class='card'>
       <h1> Cadastrar </h1>
