--- a/gatos.html
+++ b/gatos.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BuscaPet</title>
-    <link rel="stylesheet" href="estilos/index.css">
+    <link rel="stylesheet" href="estilos/gatos.css">
 </head>
 <body>
     <header>  
@@ -16,7 +16,7 @@
                 </div>
                 <ul class="header__menu">
                     <li>
-                        <a href="gatos.html" class="link-gatos">GATOS</a>
+                        <a href="gatos.html" class="link-gatos gatos">GATOS</a>
                     </li>
                     <li>
                         <a href="cachorros.html">CACHORROS</a>
@@ -47,53 +47,60 @@
     <main>
        <div class="main-esq">
             <h1>
-                Encontre seu <span class="Pet">Pet</span>
+                GATOS
             </h1>
+            <hr> 
+            <div class="opcoes">
+                <a href="#ver-todos">Ver Todos</a>
+                <a href="#perdidos">Perdidos</a>
+                <a href="#achados">Achados</a>
+                <a href="#encontrador">Encontrados</a>
+            </div>
             <form action="/search" method="get">
                 <input type="search" name="q" placeholder="Pesquisar...">
             </form>
             <p class="p_input">
                 Mostrando 'x' Pets em um raio de 'y' km 
             </p>
-            <div class="cachorro_box">
-                    <div class="cachorro_esq">
-                        <h2>
-                            Cachorro Macho
-                        </h2>
-                        <p>
-                            Encontrado - 3km de distância
-                        </p>
+            <div class="container">
+                <div class="gato_box">
+                    <div class="gato_esq">
+                        <h2>Gata Fêmea</h2>
+                        <p>Perdida - 200m de distância</p>
                         <ul>
-                            <li>Perdido em: </li>
+                            <li>Perdido em:</li>
                             <li>Achado em:</li>
                             <li>...</li>
                         </ul>
                     </div>
-                    <img src="imagens/cachorro.png" alt="cachorro" class="img_cachorro">
-                
-            </div>
-            <div class="gato_box">
-                <div class="gato_esq">
-                    <h2>
-                        Gata Fêmea
-                    </h2>
-                    <p>
-                        Perdida - 200m de distância
-                    </p>
-                    <ul>
-                        <li>Perdido em: </li>
-                        <li>Achado em:</li>
-                        <li>...</li>
-                    </ul>
+                    <img src="imagens/gato-azul.png" alt="gato" class="img_gato">
                 </div>
-                <img src="imagens/gato.png" alt="gato" class="img_gato">
+                <div class="gato_box">
+                    <div class="gato_esq">
+                        <h2>Gata Fêmea</h2>
+                        <p>Perdida - 200m de distância</p>
+                        <ul>
+                            <li>Perdido em:</li>
+                            <li>Achado em:</li>
+                            <li>...</li>
+                        </ul>
+                    </div>
+                    <img src="imagens/gato.png" alt="gato" class="img_gato">
+                </div>
+                <div class="gato_box">
+                    <div class="gato_esq">
+                        <h2>Gata Fêmea</h2>
+                        <p>Perdida - 200m de distância</p>
+                        <ul>
+                            <li>Perdido em:</li>
+                            <li>Achado em:</li>
+                            <li>...</li>
+                        </ul>
+                    </div>
+                    <img src="imagens/gato-verde.png" alt="gato" class="img_gato">
+                </div>
             </div>
-
-
-       </div>
-        <div class="mapa">
-            <img src="imagens/mapa1.png" alt="mapa_1">
-        </div> 
+        </div>
     </main>
 </body>
 </html>
