--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
                 </div>
                 <ul class="header__menu">
                     <li>
-                        <a href="#gatos">GATOS</a>
+                        <a href="gatos.html" class="link-gatos">GATOS</a>
                     </li>
                     <li>
-                        <a href="cachorros">CACHORROS</a>
+                        <a href="cachorros.html">CACHORROS</a>
                     </li>
                     <li>
                         <a href="#outros">OUTROS</a>
