--- a/cadastro.html
+++ b/cadastro.html
@@ -52,6 +52,6 @@
 
     </div>
   </div>
-  <script src="script/cadastro.js"></script>
+  <script src="script/cadastrar.js"></script>
 </body>
 </html>
