--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
                     <p>|</p>
                     <a href="cadastro.html">Cadastro</a>
                 </div>
+                <div class='botao'>
+                    <br>
+                    <button class="cadastrarPet-button" onclick='pet()'>CADASTRE UM PET</button>
+                </div>
             </div>
         </nav>
     </header>
@@ -49,8 +53,9 @@
             <h1>
                 Encontre seu <span class="Pet">Pet</span>
             </h1>
-            <form action="/search" method="get">
-                <input type="search" name="q" placeholder="Pesquisar...">
+            <form id="search-form">
+                <input type="search" id="search-input" placeholder="Pesquisar...">
+                <button type="submit">Buscar</button>
             </form>
             <p class="p_input">
                 Mostrando 'x' Pets em um raio de 'y' km 
@@ -92,41 +97,13 @@
 
        </div>
         <div id="map" class="map-container"></div>
-            <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-            <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
-
-            <script>
-            var map = L.map('map').setView([-23.671615, -46.562279], 13);
-
-            // Use OpenStreetMap basemap tiles
-            L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-            attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
-            }).addTo(map);
-
-            // Ícones personalizados
-            var lostDogIcon = L.icon({
-            iconUrl: 'imagens/patinha vermelha.png',
-            shadowSize: [50, 64],
-            iconAnchor: [22, 94],
-            shadowAnchor: [4, 62],
-            popupAnchor: [-3, -76]
-            });
-
-            var foundDogIcon = L.icon({
-            iconUrl: 'imagens/patinha verde.png',
-            shadowSize: [50, 64],
-            iconAnchor: [22, 94],
-            shadowAnchor: [4, 62],
-            popupAnchor: [-3, -76]
-            });
-
-            // Marcadores com ícones e popups
-            L.marker([-23.671615, -46.562279], {icon: lostDogIcon}).addTo(map).bindPopup("Cachorro perdido.");
-            L.marker([51.495, -0.083], {icon: foundDogIcon}).addTo(map).bindPopup("Cachorro encontrado!");
-
-
-            L.Control.geocoder().addTo(map);
-            </script>
+        <script src="script/mapa.js">
+            
+            
+        </script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDBm3TCWXyQXpG5p6XRGEVpqYfdkwbCzHs&callback=initMap"
+        async defer></script>
+        <script src="script/login.js"></script>
     </main>
 </body>
 </html>
