--- a/cachorros.html
+++ b/cachorros.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BuscaPet</title>
-    <link rel="stylesheet" href="estilos/gatos.css">
+    <link rel="stylesheet" href="estilos/outros.css">
 </head>
 <body>
     <header>  
@@ -16,10 +16,10 @@
                 </div>
                 <ul class="header__menu">
                     <li>
-                        <a href="gatos.html" class="link-gatos gatos">GATOS</a>
+                        <a href="gatos.html">GATOS</a>
                     </li>
                     <li>
-                        <a href="cachorros.html">CACHORROS</a>
+                        <a href="cachorros.html" class="link-gatos gatos">CACHORROS</a>
                     </li>
                     <li>
                         <a href="outros.html">OUTROS</a>
@@ -47,7 +47,7 @@
     <main>
        <div class="main-esq">
             <h1>
-                GATOS
+                CACHORROS
             </h1>
             <hr> 
             <div class="opcoes">
@@ -65,7 +65,7 @@
             <div class="container">
                 <div class="gato_box">
                     <div class="gato_esq">
-                        <h2>Gata Fêmea</h2>
+                        <h2>Cachorro Fêmea</h2>
                         <p>Perdida - 200m de distância</p>
                         <ul>
                             <li>Perdido em:</li>
@@ -73,11 +73,11 @@
                             <li>...</li>
                         </ul>
                     </div>
-                    <img src="imagens/gato-azul.png" alt="gato" class="img_gato">
+                    <img src="imagens/cachorro.png" alt="gato" class="img_gato">
                 </div>
                 <div class="gato_box">
                     <div class="gato_esq">
-                        <h2>Gata Fêmea</h2>
+                        <h2>Cachorro Macho</h2>
                         <p>Perdida - 200m de distância</p>
                         <ul>
                             <li>Perdido em:</li>
@@ -85,11 +85,11 @@
                             <li>...</li>
                         </ul>
                     </div>
-                    <img src="imagens/gato.png" alt="gato" class="img_gato">
+                    <img src="imagens/cachorro.png" alt="gato" class="img_gato">
                 </div>
                 <div class="gato_box">
                     <div class="gato_esq">
-                        <h2>Gata Fêmea</h2>
+                        <h2>Cachorro Fêmea</h2>
                         <p>Perdida - 200m de distância</p>
                         <ul>
                             <li>Perdido em:</li>
@@ -97,7 +97,7 @@
                             <li>...</li>
                         </ul>
                     </div>
-                    <img src="imagens/gato-verde.png" alt="gato" class="img_gato">
+                    <img src="imagens/cachorro.png" alt="gato" class="img_gato">
                 </div>
             </div>
         </div>
