--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
                         <a href="cachorros.html">CACHORROS</a>
                     </li>
                     <li>
-                        <a href="#outros">OUTROS</a>
+                        <a href="outros.html">OUTROS</a>
                     </li>
                     <li>
-                        <a href="#comunidade">COMUNIDADE</a>
+                        <a href="comunidade.html">COMUNIDADE</a>
                     </li>
                     <li>
-                        <a href="#quem-somos">QUEM SOMOS</a>
+                        <a href="quem-somos.html">QUEM SOMOS</a>
                     </li>
                 </ul>
             </div>
